# detectable_flat_combining

./: .gitignore  CMakeLists.txt  README.md  recov_fc.cpp
data/: green-pstack-ll-dfc.txt  green-pstack-ll-oflf.txt  green-pstack-ll-pmdk.txt  green-pstack-ll-rfc.txt  green-pstack-ll-romlogfc.txt  green-pstack-ll-srfc.txt  nvram-pstack-ll-dfc.txt  nvram-pstack-ll-oflf.txt  nvram-pstack-ll-pmdk.txt  nvram-pstack-ll-romlogfc.txt  optane-pstack-ll-oflf.txt  optane-pstack-ll-pmdk.txt  optane-pstack-ll-recov_fc.txt  optane-pstack-ll-rfc.txt  optane-pstack-ll-romlogfc.txt  plot.py  pwb-pfence-dfc.txt  pwb-pfence-romlogfc.txt
dfc/: CMakeLists.txt  dfc.cpp  run.sh
global_dfc/: CMakeLists.txt  global_dfc.cpp
other_platforms/: Makefile  PBenchmarkStacks.hpp  pstack-ll.cpp  ptm.h
other_platforms/one_file/: OneFilePTMLF.hpp
other_platforms/pmdk/: PMDKTM.hpp
other_platforms/pmdk_stack/: CMakeLists.txt  stack.cpp
other_platforms/romulus/: CRWWP_SpinLock.hpp  RomLogFC.hpp  RomulusLog.cpp  RomulusLog.hpp  ThreadRegistry.cpp  ThreadRegistry.hpp  malloc.cpp  pfences.h
other_platforms/treiber_stack/: TreiberStack.hpp
scalable_recoverable_flat_combining/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  srfc  srfc.cpp
